Anonymous functions removed from format profile